  - Added ``_stylesheet_required`` internal setting, defaulting to 0.
  - Moved "id" attribute from container (section etc.) to title's <a>
    tag, to be on the same tag as "name".
    (!!! To be reverted in Docutils 0.5.)
  - Added vertical space between fields of field lists.
  - Added ``--compact-field-lists`` option to remove vertical space in
    simple field lists.

* docutils/writers/docutils_xml.py:

  - Made ``xmlcharrefreplace`` the default output encoding error
    handler.

* docutils/writers/unicode_latex.py: Added to project; mapping of
  Unicode characters to LaTeX equivalents.

* docs/dev/distributing.txt: Added to project; guide for distributors
  (package maintainers).

* docs/dev/hacking.txt: Added to project; guide for developers.

* docs/user/links.txt: Added to project; lists of Docutils-related
  links.

* docs/user/mailing-lists.txt: Added to project; information about
  Docutils-related mailing lists and how to access them.

* docs/ref/rst/substitutions.txt: "reStructuredText Standard
  Substitution Definition Sets", added to project.

* test/coverage.sh: Added to project; test coverage script.

* test/DocutilsTestSupport.py:

  - Added support for specifying runtime settings at the suite level.

* tools/rst2html.py: Made stylesheet requirement explicit (via
  ``_stylesheet_required`` setting).

* tools/rstpep2html.py: Renamed from pep.py.

* tools/dev/create_unimap.py: Added to project; script to create the
  docutils/writers/unimap_latex.py mapping file.

* tools/dev/profile_docutils.py: Added to project; profiler script.

* tools/dev/unicode2rstsubs.py: Moved from tools/unicode2rstsubs.py.


Release 0.3.9 (2005-05-26)
==========================

* General:

  - Eliminated and replaced all uses of the old string attributes
    ``id``, ``name``, ``dupname`` and ``class`` with references to the
    new list attributes ``ids``, ``names``, ``dupnames`` and
    ``classes`` throughout the whole source tree.

* docutils/core.py:
